# openbook

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  openbook.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
api/: schema.sql  worker.js  wrangler.toml
